--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,13 +1,19 @@
 {
   "compilerOptions": {
-    "target": "es2017",                          
-    "module": "commonjs", 
-    "allowJs": true,                                            
-    "esModuleInterop": true,                  
-    "skipLibCheck": true,                     
-    "forceConsistentCasingInFileNames": true  
+    "target": "es2017",
+    "module": "commonjs",
+    "allowJs": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "outDir": "dist/",
+    "sourceMap": true
   },
   "include": [
     "src/**/*.ts"
+  ],
+  "exclude": [
+    "typings/*",
+    "node_modules"
   ]
 }
